client/assets/stylesheets/_nav-unification.scss
/* stylelint-disable selector-max-id */

/**
 * Nav unification styles
 *
 * This file contains all relevant styles for the nav unification prototype (see pbAPfg-O2).
 * Using a single place to store these styles will allow us to easily (re)move them later.
 * Depending on the outcome they'll either be deleted or moved to the relevant places.
 *
 * IMPORTANT: When adding to this file please also add the source file in a comment.
 */

.theme-default.is-nav-unification { // excludes theme-jetpack-cloud.
	// breakpoint used in wp-admin
	@media only screen and ( min-width: 782px ) {
		// client/assets/stylesheets/shared/_variables.scss
		--masterbar-height: 32px;
	}
	$nav-unification-primary: #23282d;
	$nav-unification-secondary: #101517;
	$nav-unification-masterbar-font-size: 13px;
	$nav-unification-masterbar-mobile-font-size: 14px;

	// packages/calypso-color-schemes/src/shared/color-schemes/_default.scss
	--color-masterbar-background: #101517;
	--color-masterbar-border: #333;
	--color-masterbar-item-hover-background: #333;
	--color-masterbar-item-active-background: #23282d;

	// client/layout/style.scss
	.layout__secondary {
		border-right: none;
	}

	// General Top bar styles
	// client/layout/masterbar/style.scss
	.masterbar {
		font-size: $nav-unification-masterbar-font-size;
	}

	// client/layout/masterbar/style.scss
	.masterbar__item {
		padding: 0 8px;
		font-size: $nav-unification-masterbar-font-size;
	}

	// client/layout/masterbar/style.scss
	.masterbar__item-bubble {
		top: calc( 50% - 14px );
		left: -7px;
	}

	// client/layout/masterbar/style.scss
	@include breakpoint-deprecated( '<480px' ) {
		.masterbar__item-bubble {
			left: calc( 50% - 14px );
		}
	}

	// breakpoint used in wp-admin
	@media only screen and ( max-width: 782px ) {
		.masterbar__item {
			font-size: $nav-unification-masterbar-mobile-font-size;
			padding: 0 15px;
		}

		.masterbar__item .gridicon + .masterbar__item-content {
			padding-left: 8px;
		}

		.masterbar__reader .gridicon + .masterbar__item-content {
			padding-left: 6px;
		}
	}

	// New post button
	.masterbar__item-new {
		padding: 0 10px;
		font-size: $nav-unification-masterbar-font-size;

		&:hover {
			background: #e9e9ea;
			color: $nav-unification-primary;
		}

		.masterbar__item-content {
			color: $nav-unification-primary;
		}
		.gridicon {
			fill: $nav-unification-primary;
			transform: translateX( 1px );

			+ .masterbar__item-content {
				padding: 0 1px 0 5px;
			}
		}
	}

	// client/layout/masterbar/style.scss
	.masterbar__item-new,
	.masterbar__toggle-drafts.button.is-borderless {
		height: 24px;
		margin: 4px 6px 4px 8px;
		/* stylelint-disable-next-line scales/radii */
		border-radius: 5px;
	}

	.masterbar__toggle-drafts.button.is-borderless {
		margin-left: -20px;

		&:hover {
			background-color: #e9e9ea;

			.count {
				border-color: $nav-unification-primary;
				color: $nav-unification-primary;
			}
		}
	}

	// breakpoint used in wp-admin
	@media only screen and ( max-width: 782px ) {
		.masterbar__item-new,
		.masterbar__toggle-drafts.button.is-borderless {
			height: 34px;
			margin-top: 6px;
			margin-right: 9px;
			padding: 0 16px 0 14px;
		}

		.masterbar__toggle-drafts.button.is-borderless {
			padding: 0 14px 0 8px;
			margin-left: -26px;
		}
	}

	@include breakpoint-deprecated( '<480px' ) {
		.masterbar__item-new,
		.masterbar__toggle-drafts.button.is-borderless {
			height: 36px;
			margin-top: 5px;
			width: auto;
		}
	}

	// Account button

	// client/layout/masterbar/style.scss
	.masterbar__item-me {
		padding-right: 10px;
		padding-left: 8px;

		.gravatar {
			top: 50%;
			left: 50%;
			transform: translate( -50%, -50% );
		}
	}
	// breakpoint used in wp-admin
	@media only screen and ( max-width: 782px ) {
		.masterbar__item-me {
			padding: 0 13px 0 15px;

			// fix for profile picture currently hidden in production
			.masterbar__item-content {
				display: block;
			}

			.gravatar {
				width: 22px;
				height: 22px;
			}
		}
	}

	@include breakpoint-deprecated( '<480px' ) {
		.masterbar__item-me {
			padding: 0 15px;

			.gravatar {
				width: 19px;
				height: 19px;
			}
		}
	}

	// Notifications button
	.masterbar__item-notifications {
		padding-right: 5px;
		padding-left: 5px;

		.gridicon {
			margin-top: 1px;
		}
	}

	// client/layout/masterbar/style.scss
	.masterbar__item-notifications .masterbar__notifications-bubble {
		top: 3px;
		transform: translateX( 1px );
	}

	// breakpoint used in wp-admin
	@media only screen and ( max-width: 782px ) {
		.masterbar__item-notifications {
			margin-right: 10px;
			padding: 0 15px;
			width: 26px;

			.gridicon {
				flex-shrink: 0;
			}
		}

		// client/layout/masterbar/style.scss
		.masterbar__item-notifications .masterbar__notifications-bubble {
			top: 10px;
		}
	}

	@include breakpoint-deprecated( '<480px' ) {
		.masterbar__item-notifications {
			margin-left: auto;
			margin-right: auto;
			padding: 0 8px;
			width: auto;
		}
	}

	// breakpoint used in wp-admin
	@media only screen and ( max-width: 782px ) {
		// client/layout/style.scss
		.layout.focus-content .layout__secondary {
			transform: translateX( -100% );
			padding: 71px 24px 24px;
		}

		.layout.focus-sites:not( .is-section-post-editor ) .layout__primary .main,
		.layout.focus-sidebar:not( .is-section-post-editor ) .layout__primary .main {
			transform: translateX( 100% );
		}
	}
}

/**
 * Color scheme specific styles
 *
 * Nav unification introduces changes that require modifications to existing color schemes.
 */

// Ensure sidebar is visually separate from the content in the Contrast color scheme
// client/layout/style.scss
.theme-default.is-contrast.is-nav-unification {
	.layout__secondary {
		outline: 1px solid var( --color-sidebar-border );
	}
}

